feat: 1991 get parties (#243)
* chore: add swagger interface validation

* chore: add swagger validation of interfaces to ci/cd

* feat: get /parties/... interfaces @ Outbound

* fix: circleci config

* chore: fix invalid script, specify requirements to be passed for build

* chore: specify requires for build-local

* feat: add use of `acounts` to examples for put parties/{Type}/{ID}

* fix: tests broken by using new js syntax

* lint: fix smells

* feat: migrate getPartiesById from master/pisp

* test: outbound parites handler

* test: improve test coverage

* test: extend tests for GET /parties @ Outbound

* refactor: properly use of PartiesModel.channelName

* lint: clenup commented out code
